PIRATE-4738, fix overlapping elements on feature area on mobile

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -386,6 +386,7 @@
     width: 100%;
     margin-bottom: 0;
     border-bottom: none;
+    z-index: 99999;
 
     @media only screen and (min-width: 1025px) {
         height: 60vh;
@@ -393,9 +394,15 @@
 
     min-height: 80%;
 
+    @media only screen and (max-width: 600px) {
+        min-height: auto;
+        position: relative;
+        margin-bottom: 20px;
+    }    
+
     .hero-logo {
         position: absolute;
-        top: 40%;
+        top: 35%;
         @media only screen and (max-width : 1024px) {
             top: 30%;
             bottom: inherit;
